Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-57056

Syslog severity set incorrectly for INFO messages

    • Server Security
    • Fully Compatible
    • ALL
    • v7.0, v6.0, v5.0, v4.4
    • Security 2021-06-28, Security 2023-04-17

      The default syslog configuration is to only output severity info or higher to /var/log/messages. I expect this would by default output slow queries as well. However this is not happening. After investigation with journalctl -p X, we discovered that slow messages have a log level of INFO, but are posted to syslog with a severity of DEBUG (7). As a result, such messages do not appear in /var/log/messages.

      The documentation still mentions all messages being printed with severity info, which is not correct: https://docs.mongodb.com/manual/reference/configuration-options/#mongodb-setting-auditLog.destination: "Audit messages have a syslog severity level of info and a facility level of user."

            Assignee:
            gabriel.marks@mongodb.com Gabriel Marks
            Reporter:
            bhaarsma@cloudbilling.nl Bouke Haarsma
            Votes:
            1 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: