SERVER-57056 Give LogSeverity::Log() messages syslog severity level info